# NeuralNetworksFromScratch

./: CMakeLists.txt  README.md
headers/activations/: relu.h  sigmoid.h
headers/layers/: linear.h
headers/losses/: mse.h
src/: main.cpp
src/activations/: relu.cpp  sigmoid.cpp
src/layers/: linear.cpp
src/losses/: mse.cpp
